Editing the footer for all the pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1667,7 +1667,7 @@ input, select, textarea {
 		input[type="reset"].style1,
 		button.style1,
 		.button.style1 {
-			background: #fe6239 url("images/overlay.png");
+			background: #f66e11 url("images/overlay.png");
 			color: #fff;
 		}
 
@@ -1684,7 +1684,7 @@ input, select, textarea {
 			input[type="reset"].style1:active,
 			button.style1:active,
 			.button.style1:active {
-				background-color: #fe6239;
+				background-color: #f66e11;
 			}
 
 		input[type="button"].style2,
@@ -1845,7 +1845,7 @@ input, select, textarea {
 		}
 
 		.feature-list h3 {
-			color: #fe6239 !important;
+			color: #f66e11 !important;
 			margin: -0.35em 0 0.75em 0;
 			font-size: 1.15em;
 			letter-spacing: 0.05em;
@@ -1997,13 +1997,13 @@ input, select, textarea {
 			}
 
 		.wrapper.style1 {
-			background: #fe6239 url("images/overlay.png");
+			background: #f66e11 url("images/overlay.png");
 			color: #eee;
 			color: rgba(255, 255, 255, 0.75);
 		}
 
 			.wrapper.style1 .title {
-				background: #fe6239 url("images/overlay.png");
+				background: #f66e11 url("images/overlay.png");
 				color: #fff;
 			}
 
@@ -2094,7 +2094,7 @@ input, select, textarea {
 		#logo h1 {
 			font-weight: 900;
 			text-transform: uppercase;
-			color: #f35f39;
+			color: #f66e11;
 			font-size: 2em;
 			letter-spacing: 0.25em;
 		}
@@ -2265,7 +2265,7 @@ input, select, textarea {
 	}
 
 		#highlights .highlight h3 {
-			color: #f35f39;
+			color: #f66e11;
 			margin: 0 0 0.75em 0;
 			font-size: 1.15em;
 			letter-spacing: 0.05em;
